Aufgabe 1 funzt, config.properties hinzugefuegt, code aufgeraeumt

--- a/VacationCharts/.project
+++ b/VacationCharts/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/config.properties</name>
+			<type>1</type>
+			<locationURI>PROJECT_LOC/config.properties</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
