erster push ayo

--- a/VacationCharts/config.properties
+++ b/VacationCharts/config.properties
@@ -12,7 +12,7 @@ URL jdbc:oracle:thin:@dbl43.beuth-hochschule.de:1521:oracle
 DRV oracle.jdbc.driver.OracleDriver
 
 # Nutzername:
-USR ULLMANN
+USR ullmann
 
 # Passwort:
 PW geheim08
