--- a/VacationCharts/.classpath
+++ b/VacationCharts/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/rocko/Dropbox/Studium/Studium - Medieninformatik/!semester 02/Datenbanken/Übung/ojdbc7.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rocko/Dropbox/Studium/Studium - Medieninformatik/!semester 02/Datenbanken/jfreechart-1.0.19/jfreechart-1.0.19/lib/jcommon-1.0.23.jar"/>
-	<classpathentry kind="lib" path="C:/Users/rocko/Dropbox/Studium/Studium - Medieninformatik/!semester 02/Datenbanken/jfreechart-1.0.19/jfreechart-1.0.19/lib/jfreechart-1.0.19.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Marlon/Dropbox/Leon Marlon Robert Tauschbörse (Flohmarkt)/DBS/jfreechart/jcommon-1.0.23.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Marlon/Dropbox/Leon Marlon Robert Tauschbörse (Flohmarkt)/DBS/jfreechart/jfreechart-1.0.19.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Marlon/Dropbox/Leon Marlon Robert Tauschbörse (Flohmarkt)/DBS/ojdbc6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
