--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,54 @@
+######################
+# Directories #
+######################
+
+/build/
+/bin/
+target/
+ 
+# OS Files #
+.DS_Store
+ 
 *.class
 
+######################
+# Eclipse
+######################
+ 
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+/src/main/resources/rebel.xml
+# External tool builders
+.externalToolBuilders/
+
+######################
 # Mobile Tools for Java (J2ME)
+######################
+
 .mtj.tmp/
 
+######################
 # Package Files #
+######################
+
 *.jar
 *.war
 *.ear
 
+######################
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+######################
+
 hs_err_pid*
