--- a/VacationCharts/config.properties
+++ b/VacationCharts/config.properties
@@ -5,8 +5,8 @@
 
 
 # URL für den DB-Server
-URL jdbc:oracle:thin:@dbl43.beuth-hochschule.de:1521:oracle
-!URL jdbc:oracle:thin:@localhost:1521:oracle
+!URL jdbc:oracle:thin:@dbl43.beuth-hochschule.de:1521:oracle
+URL jdbc:oracle:thin:@localhost:1521:oracle
 
 # Oracle JDBC-Treiber
 DRV oracle.jdbc.driver.OracleDriver
