--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 ######################
+# Project #
+######################
+config.properties
+
+######################
 # Directories #
 ######################
 
@@ -14,7 +19,7 @@ target/
 ######################
 # Eclipse
 ######################
- 
+
 *.pydevproject
 .metadata
 bin/**
