--- a/VacationCharts/config.properties
+++ b/VacationCharts/config.properties
@@ -12,7 +12,7 @@ URL jdbc:oracle:thin:@localhost:1521:oracle
 DRV oracle.jdbc.driver.OracleDriver
 
 # Nutzername:
-USR ullmann
+USR Mattern
 
 # Passwort:
-PW geheim08
+PW gorilla19
